    namespaces.
  * Add the ability for sysadmins to create user accounts (hanspeterklapf).
  * Topic add/update is now significantly faster due to query refactoring
    and changes so that the search index is not re-optimized after every
    add/update.
  * Search engine optimizations.  Existing JAMWiki installs may want to
    rebuild their search index.
  * Update the CSS & HTML used for forms.  Requires StyleSheet topic update.
  * Support ehcache.xml configuration.  Based on code by Daniel Fisla (dfisla).
  * Automatically populate sample JDBC values based on database type on the
    setup and admin pages.
  * Remove all dependencies on Spring from the jamwiki-core project by
    converting org.jamwiki.model.Role to an interface and creating a new
    org.jamwiki.authentication.RoleImpl class.
  * Run the spam filter against edit comments as well as topic content to
    thwart spam attempts.
  * Remove ability to automatically upgrade from versions prior to 0.7.0.
  * Upgrade to Spring Framework 3.0.1.RELEASE.
  * Upgrade to Spring Security 3.0.2.RELEASE.
  * Upgrade to Lucene Search 3.0.1.
  * Upgrade to ehcache 1.7.0.
  * Upgrade to commons-pool 1.5.4.
  * Upgrade to JUnit 4.7.

Bugfixes:

  * Leading whitespace should be trimmed from category names such as
    "Category: Test" or "Category : Test".
  * Special:Import and Special:Export code refactored to avoid OOM errors with
    topics that have extensive history.
  * Properly parse template parameters that are themselves templates, such as
    "{{{{{template_name}}}}}" or "{{{1|{{PAGENAME}}}}}".
  * Process interwiki links only if the link does not contain a virtual wiki
    or namespace.  Thus if a wiki has a namespace of "Test" and an interwiki
    of "Test", the link "Test:Topic" will parse as an internal link rather than
    an interwiki link.

Translation Updates:

  * Updated German translations (axelclk).


0.8.3
=====

Bugfixes:
