@@ -746,6 +746,8 @@ STATEMENT_SELECT_TOPIC_BY_TYPE = \
     select topic_name, topic_id from jam_topic \
     where jam_topic.virtual_wiki_id = ? \
     and jam_topic.topic_type in (?, ?) \
+    and jam_topic.namespace_id >= ? \
+    and jam_topic.namespace_id <= ? \
     and jam_topic.delete_date is null \
     order by jam_topic.topic_name \
     limit ? offset ?
